# Geometric_Reasoning_Auto-Mating_Engine

./: PLATE.STEP  pyproject.toml  test_solid.py
geomate/: cli.py
geomate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
geomate/features/: extract.py
geomate/io/: ids.py  step_io.py  topo.py
outputs/run1/: part_index.json
outputs/run2/parts/part_84bdc97e41_r0_s0/: PartFeatures.json
outputs/run3/parts/part_84bdc97e41_r0_s0/: PartFeatures.json
outputs/run4/parts/part_84bdc97e41_r0_s0/: PartFeatures.json
outputs/run5/parts/part_84bdc97e41_r0_s0/: PartFeatures.json
